# trello-agent-script

./: .gitignore  PROMPT.md  README.md  TRELLO_AGENT_RULE.md  example.json  main.py  pyproject.toml  requirements.txt
trello_task_maker/: __init__.py  main.py
